<resources>

    <string name="app_name">MashPotato</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="shakes">Shakes</string>
    <string name="verifyPassword">Verify Password: </string>
    <string name="firstName">First Name: </string>
    <string name="lastName">Last Name: </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="t">96</string>
    <string name="shake">Shake the device to cool down the potato\'s temperature! \n\nThe potato\'s temperature is currently </string>
    <string name="maxGameTime">Set max round length (in minutes):</string>
    <string name="logout">Log Out</string>
    <string name="potatoTemperature">Potato Temperature</string>
    <string name="error_field_required">Error-This field is required.</string>
    <string name="error_invalid_password">Error-Password invalid.</string>
    <string name="error_incorrect_password">Error-Incorrect password.</string>
    <string name="numDaysAlive">Number of Days Alive: </string>
    <string name="date">Date Created </string>
    <string name="playerList">Player List</string>
    <string name="newGame">Create a Game</string>
    <string name="newGame1">Create Game</string>
    <string name="stats">Stats</string>
    <string name="upgrades">Upgrades and Gems</string>
    <string name="statsTitle">Stats For: </string>
    <string name="numKills">Number Of Kills: </string>
    <string name="findKillable">Find players near enough to kill. </string>
    <string name="playerType">Player Type: </string>
    <string name="selectAGame">Select a game from the list below. </string>
    <string name="joinGame">Join a Game </string>
    <string name="score">Score: </string>
    <string name="playerStatus">Player Status: </string>
    <string name="numberOfPotatoes">Select Max Number of Potatoes: </string>
    <string name="numOfPotatoes">Max Number of Potatoes: </string>
    <string name="upgradesAndGems">Allow the use of upgrades and gems.</string>
    <string name="playersInGame">List of Players in Game</string>
    <string name="Reset">Refresh</string>
    <string name="joinThisGame">Join this game. </string>
    <string name="savePotato">Save the Potato!</string>
    <string name="hasPotato">Has possession of potato: </string>
    <string name="leaveGame">Leave current game.</string>
    
    <string name="notification_subtitle">Counting your steps</string>

    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>
    

</resources>
