<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".HomeScreenActivity" >

    <ImageButton
        android:id="@+id/stats"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/logout"
        android:layout_toRightOf="@id/stats"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:text="@string/logout" />

    <ViewFlipper
        android:id="@+id/ViewFlipper01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/stats" >

        <!-- adding views to ViewFlipper -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/username"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView77"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:text="@string/playerStatus"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/playerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_alignParentRight="true"
                android:text="@string/playerType"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView9247"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView77"
                android:text="@string/hasPotato"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hasPotato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView77"
                android:layout_alignParentRight="true"
                android:text="@string/numKills"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9247"
                android:text="@string/score"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_below="@+id/textView9247"
                android:layout_alignParentRight="true"
                android:text="@string/numKills"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView97"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/leaveGame"
                android:src="@drawable/cube" />

            <Button
                android:id="@+id/leaveGame"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/leaveGame" >
            </Button>
        </RelativeLayout>

        <!-- view 2 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView11233"
                    android:layout_width="fill_parent"
                    android:layout_height="190dp"
                    android:src="@android:drawable/btn_dialog" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/saveThePotato"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/savePotato" >
                </Button>
            </TableRow>

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
    </ViewFlipper>

</RelativeLayout>