<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
         android:layout_marginTop="150dp"
        android:layout_height="wrap_content" >
        
            <Button
        android:id="@+id/createAGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newGame" />
        
        </TableRow>
        
    <TableRow
        android:id="@+id/tableRow02"
        android:layout_width="fill_parent"
         android:layout_marginTop="20dp"
        android:layout_height="wrap_content" >
        
            <Button
        android:id="@+id/joinGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinGame" />
        
        </TableRow>

   <TableRow
        android:id="@+id/tableRow21"
         android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_height="wrap_content" >
        
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/logout" />
    
    </TableRow>

</LinearLayout>
