<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfPotatoes" />

        <EditText
            android:id="@+id/numPotatoes"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableRow>

    <TextView
        android:id="@+id/maxText"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxGameTime" />

    <EditText
        android:id="@+id/maxRoundTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/maxText"
        android:inputType="text" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true" 
        android:text="@string/newGame1" />

</RelativeLayout>