<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/margin" >

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/display_background"
        android:text="@string/t"
        android:textSize="120sp" />

    <TextView
        android:id="@+id/potatoTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp"
        android:layout_centerHorizontal="true"
        android:text="@string/potatoTemperature"
        android:textColor="@color/display_background"
        android:textAlignment="center"
        android:maxLines="10"
        android:textSize="20sp" 
        android:layout_marginTop="5dp"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/potatoTemp"
        android:layout_marginTop="36dp" />
    
     <TextView
        android:id="@+id/shake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/shake"
        android:textColor="@color/display_background"
        android:textAlignment="center"
        android:textSize="27sp" 
        android:textStyle="italic"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>